
    - Added "retriggerPitches" tag to the PadSequenceEngine. If set to true, all chord pitches will be retriggered on every chord
      change. If set to false, only the chord pitches that are not included in the previous chord are triggered, the other ones
      are kept active. Defaults to true, because this was the behavior of version 0.3 and before.

    - Corrected the legato fix from the previous release, which lead to the note being immediately cut off if the legato flag was
      used with the same pitch (e.g., "0~/4,0/4"). This situation is now treated as if the legato flag were off.

    - The MIDI channels are now muted if the applet is stopped and the MidiPlayer is used.


0.3: 2011-10-01

    - Rewrote the internals of the chord functionality and adapted all code accordingly. Now not only major and minor chords
      are supported, but any 3-note chords which use 3 distinct pitches that do not span more than 11 halftones. Extended
      the chord syntax to add inversion support to chords and added diminished and augmented chords ("dim" and "aug",
      respectively, e.g., "Adim4" is a diminished A chord using first inversion, "Caug6" is an augmented C chord using second
      inversion). Arbitrary chords can be provided with the syntax "pitch1:pitch2:pitch3". For example, "-7:-3:3" gives you the
      non-standard chord using the pitches F, A and e.

    - Chord lengths in the PatternHarmonyEngine can now be specified as fractions of beats instead of only whole beats
      (e.g., you can now use "Am/7.5" for a chord that lasts 7.5 beats). Chord lengths are rounded to the nearest integer number
      of ticks.  
	  
    - Renamed the tag "obeyChordSubtype" (false/true) to "normalizeChords" (true/false). Normalizing a chord means converting
      chords with first or second inversion (e.g., "Am4" or "Am6") to their normalized counterpart ("Am"), which has the root